--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   },
   "devDependencies": {
     "@nuxt/eslint": "latest",
+    "@nuxtjs/tailwindcss": "6.13.1",
     "drizzle-kit": "^0.28.1",
     "eslint": "^9.14.0",
-    "nuxt": "^3.14.159",
+    "nuxt": "^3.15.2",
     "typescript": "^5.6.3",
     "vue": "latest"
   },
+  "bin": "./script.js",
   "packageManager": "pnpm@9.12.0+sha512.4abf725084d7bcbafbd728bfc7bee61f2f791f977fd87542b3579dcb23504d170d46337945e4c66485cd12d588a0c0e570ed9c477e7ccdd8507cf05f3f92eaca",
   "dependencies": {
     "drizzle-orm": "^0.36.3",
