--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "../.nuxt/tsconfig.server.json",
   "compilerOptions": {
-    "typeRoots": ["utils/types.d.ts", "@types/node"]
+    "typeRoots": ["./utils/types.d.ts", "@types/node"]
   }
 }
