--- a/package.json
+++ b/package.json
@@ -13,14 +13,13 @@
   },
   "devDependencies": {
     "@nuxt/eslint": "latest",
-    "@nuxtjs/tailwindcss": "6.13.1",
+    "@tailwindcss/vite": "^4.1.8",
     "drizzle-kit": "^0.28.1",
     "eslint": "^9.27.0",
     "nuxt": "^3.17.4",
     "typescript": "^5.8.3",
     "vue": "latest"
   },
-  "bin": "./script.js",
   "dependencies": {
     "ulid": "^2.4.0"
   },
